# Neonbet

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  check_db.py  docker-compose.dev.yml  docker-compose.yml  fix_vip.py  monte_carlo_bankroll_simulation.py  monte_carlo_fast.py  monte_carlo_optimized.py  monte_carlo_realistic.py  pyproject.toml  railway.toml  requirements.txt  reset_db.py  roadmap_claude_opus_4_6.py  setup_postgres.py  start.sh  stress_test_report.txt  test_db_connection.py  truncate.py  vercel.json
.vercel/: project.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_is_admin.py  003_add_game_settings.py  004_add_new_game_types.py  005_responsible_gambling.py
casino/: __init__.py  config.py
casino/api/: __init__.py  dependencies.py  main.py
casino/api/middleware/: __init__.py  circuit_breaker.py  idempotency.py  rate_limit.py
casino/api/routes/: __init__.py  admin.py  auth.py  bets.py  leaderboard.py  payments.py  responsible_gambling.py  wallet.py  websocket.py
casino/games/: __init__.py  crash.py  engines.py
casino/models/: __init__.py  database.py  session.py
casino/services/: __init__.py  anti_arbitrage.py  game_settings.py  ledger.py  payment.py  proof_of_reserves.py  provably_fair.py  responsible_gambling.py  risk_engine.py  rtp_verifier.py  vip_system.py  wallet_manager.py
casino/websocket/: __init__.py  crash_game.py  manager.py
frontend/: next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  wrangler.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/casino/: admin-panel.tsx  auth-modal.tsx  game-grid.tsx  header.tsx  sidebar.tsx
frontend/components/games/: crash-game.tsx
frontend/lib/: api.ts  provably-fair.ts  store.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AchievementToast.tsx  ChatPanel.tsx  FairnessModal.tsx  GameLayout.tsx  MobileNav.tsx  Navbar.tsx  Providers.tsx  Sidebar.tsx  TwoFactorModal.tsx  (+1 more)
scripts/: create_schema.sql  grant_admin.py  init-db.sql  test_api.py  test_db.py  test_register.py
tests/: conftest.py  test_api.py  test_games.py  test_provably_fair.py  test_risk_engine.py  test_vip.py
(+62 files in other folders)
